tests/snapshots/run_wpt_conformance__trtx_quantized_leaky_relu.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "qdq_subgraph.https.any.js",
    "quantized leaky relu",
    "trtx",
    Failed {
        msg: Some(
            "Failed to convert graph: graph conversion failed for trtx: leakyRelu: input dimensions: Could not get dimensions from Tensor \"(Unnamed Layer* 29) [ElementWise]_output\"\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    input: f32[2, 3];\n  }\n\n  consts {\n    operand_0: f32[1, 1] @bytes([129, 128, 128, 59]);\n    operand_1: i8[1, 1] @bytes([0]);\n    operand_2: f32[1, 1] @bytes([129, 128, 128, 59]);\n    operand_4: i8[1, 1] @bytes([0]);\n  }\n\n  nodes {\n    [operand_5] = quantizeLinear(input, operand_2, operand_1, label=\"\");\n    [operand_6] = dequantizeLinear(operand_5, operand_2, operand_1, label=\"\");\n    [operand_7] = leakyRelu(operand_6, alpha=5.799162942273234, label=\"\");\n    [operand_8] = quantizeLinear(operand_7, operand_0, operand_4, label=\"\");\n    [output] = dequantizeLinear(operand_8, operand_0, operand_4, label=\"\");\n  }\n\n  outputs { output; }\n}\n",
        ),
    },
)
