tests/snapshots/run_wpt_conformance__trtx_quantized_pad_with_constant_mode_for_XNNPack_fusion.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
qdq_subgraph.https.any.js quantized pad with constant mode for XNNPack fusion, trtx
 qdq_subgraph :: quantized pad with constant mode for XNNPack fusion: index 9: actual=0 expected=0.49803925 ulp=1056898816 tolerance=16
  inputs: input: [1.6811466217041016, 0.0479511022567749, 0.33355462551116943, -0.1988269537687301, -0.0041167140007019, -0.0634240251779556]; scale: [0.003921568859368563] (constant); zeroPoint: [0] (constant)
  expected output: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0.49803925 ...] (len=28)
  actual output: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ...] (len=28)
  expected output full nd:
[0, 0, 0, 0, 0, 0, 0, 0, 0, 0.49803925, ...] (len=28, shape=[4, 7])
  actual output full nd:
[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...] (len=28, shape=[4, 7])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    input: f32[2, 3];
  }

  consts {
    operand_1: f32[1, 1] @bytes([129, 128, 128, 59]);
    operand_2: i8[1, 1] @bytes([0]);
  }

  nodes {
    [operand_3] = quantizeLinear(input, operand_1, operand_2, label="");
    [operand_4] = dequantizeLinear(operand_3, operand_1, operand_2, label="");
    [operand_5] = pad(operand_4, label="", mode="", value=0);
    [operand_6] = quantizeLinear(operand_5, operand_1, operand_2, label="");
    [output] = dequantizeLinear(operand_6, operand_1, operand_2, label="");
  }

  outputs { output; }
}
