tests/snapshots/run_wpt_conformance__trtx_quantized_resample2d.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
qdq_subgraph.https.any.js quantized resample2d, trtx
 Failed to build graph: graph conversion failed for trtx: resample2d: input dimensions: Could not get dimensions from Tensor "(Unnamed Layer* 29) [ElementWise]_output"

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    input: f32[1, 2, 3, 1];
  }

  consts {
    operand_1: f32[1, 1, 1, 1] @bytes([129, 128, 128, 59]);
    operand_2: i8[1, 1, 1, 1] @bytes([0]);
    operand_3: f32[1, 1, 1, 1] @bytes([129, 128, 128, 59]);
    operand_4: i8[1, 1, 1, 1] @bytes([0]);
  }

  nodes {
    [operand_5] = quantizeLinear(input, operand_1, operand_2, label="");
    [operand_6] = dequantizeLinear(operand_5, operand_1, operand_2, label="");
    [operand_7] = resample2d(operand_6, axes=[1, 2], label="", mode="", scales=[], sizes=[4, 6]);
    [operand_8] = quantizeLinear(operand_7, operand_3, operand_4, label="");
    [output] = dequantizeLinear(operand_8, operand_3, operand_4, label="");
  }

  outputs { output; }
}
